force-app/main/default/objects/RTL_Campaign_History_Setting__mdt/RTL_Campaign_History_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Campaign History Setting</label>
    <pluralLabel>Campaign History Setting</pluralLabel>
</CustomObject>