force-app/main/default/objects/RTL_Campaign_History_Setting__mdt/fields/CalloutTimeoutSecond__c.field-meta.xml
<CustomField>
    <fullName>CalloutTimeoutSecond__c</fullName>
    <label>CalloutTimeoutSecond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>