force-app/main/default/objects/RTL_Campaign_History_Setting__mdt/fields/CampaignLiteURL__c.field-meta.xml
<CustomField>
    <fullName>CampaignLiteURL__c</fullName>
    <label>CampaignLiteURL</label>
    <type>Url</type>
</CustomField>