force-app/main/default/objects/RTL_Campaign_History_Setting__mdt/fields/CustomerRequestDisplay__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequestDisplay__c</fullName>
    <label>CustomerRequestDisplay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>