force-app/main/default/objects/RTL_Campaign_History_Setting__mdt/fields/ExclusiveDisplay__c.field-meta.xml
<CustomField>
    <fullName>ExclusiveDisplay__c</fullName>
    <label>ExclusiveDisplay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>