force-app/main/default/objects/RTL_Campaign_History_Setting__mdt/fields/FulfillmentDisplay__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentDisplay__c</fullName>
    <label>FulfillmentDisplay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>