force-app/main/default/objects/RTL_Campaign_History_Setting__mdt/fields/LocalExclusiveDisplay__c.field-meta.xml
<CustomField>
    <fullName>LocalExclusiveDisplay__c</fullName>
    <label>LocalExclusiveDisplay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>