force-app/main/default/objects/RTL_Campaign_History_Setting__mdt/fields/MassDisplay__c.field-meta.xml
<CustomField>
    <fullName>MassDisplay__c</fullName>
    <label>MassDisplay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>