force-app/main/default/objects/RTL_Campaign_History_Setting__mdt/fields/SmsDisplay__c.field-meta.xml
<CustomField>
    <fullName>SmsDisplay__c</fullName>
    <label>SmsDisplay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>